--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.include=oauth
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
@@ -10,3 +11,4 @@ spring.profiles.group.local-real=local-real, oauth
 spring.profiles.group.real=real, real-db, oauth
 spring.profiles.group.real1=real1, real-db, oauth
 spring.profiles.group.real2=real2, real-db, oauth
+spring.session.store-type=jdbc
