--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ plugins { // (1)
     id 'java'
 }
 
-group 'com.jojoldu.book'
-version '1.0.4-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
-sourceCompatibility = 1.8
+group 'springboot'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
@@ -14,31 +14,45 @@ repositories {
 }
 
 // for Junit 5
-test { // (2)
+test{ // (2)
     useJUnitPlatform()
 }
 
 
 dependencies {
-    //(3)
-    implementation('org.springframework.boot:spring-boot-starter-web')
-    implementation('org.springframework.boot:spring-boot-starter-mustache')
+    // spring boot
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    // lombok
-    implementation('org.projectlombok:lombok')
-    annotationProcessor('org.projectlombok:lombok')
-    testImplementation('org.projectlombok:lombok')
-    testAnnotationProcessor('org.projectlombok:lombok')
+    // JUnit
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    // Gradle 5.x 미만
+    // implementation 'org.projectlombok:lombok'
+    // Gradle 5.x 이상
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-//    implementation("org.mariadb.jdbc:mariadb-java-client")
-    implementation('com.h2database:h2')
+    // JDBC 설정
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
-    implementation('org.springframework.boot:spring-boot-starter-oauth2-client') // 권한 관련
-    implementation('org.springframework.session:spring-session-jdbc') // 권한 관련
+    // JPA 설정
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-    testImplementation("org.springframework.security:spring-security-test") // 권한 관련
+    // h2 database
+    runtimeOnly 'com.h2database:h2'
+
+    // thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    // security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.security:spring-security-test'
+    testImplementation("org.springframework.security:spring-security-test")
+
+    // spring security oauth2 client
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    // spring session jdbc
+    implementation 'org.springframework.session:spring-session-jdbc'
 
 }
